# Sources/SpiralSDK/Classes/OpenAPIs/APIs/SocialResponsibilityAPI.swift
@@ -153,6 +153,64 @@ open class SocialResponsibilityAPI {
     }
 
     /**
+     Load a customer's detailed Social Impact transactions list based on provided filters
+     
+     - parameter X_SPIRAL_CUSTOMER_ID: (header) Unique end user bank customer ID. (optional)
+     - parameter X_SPIRAL_REQUEST_ID: (header) Unique request ID used for troubleshooting. (optional)
+     - parameter rewardUnitId: (query) Reward unit to get transactions by. Defaults to all units if not provided. (optional)
+     - parameter pageable: (query)  (optional)
+     - parameter apiResponseQueue: The queue on which api response is dispatched.
+     - parameter completion: completion handler to receive the data and the error objects
+     */
+    @discardableResult
+    open class func getImpactCenterTransactions(X_SPIRAL_CUSTOMER_ID: String? = nil, X_SPIRAL_REQUEST_ID: String? = nil, rewardUnitId: String? = nil, pageable: Pageable? = nil, apiResponseQueue: DispatchQueue = OpenAPIClientAPI.apiResponseQueue, completion: @escaping ((_ data: EverydayImpactCenterTransactionsResponse?, _ error: Error?) -> Void)) -> RequestTask {
+        return getImpactCenterTransactionsWithRequestBuilder(X_SPIRAL_CUSTOMER_ID: X_SPIRAL_CUSTOMER_ID, X_SPIRAL_REQUEST_ID: X_SPIRAL_REQUEST_ID, rewardUnitId: rewardUnitId, pageable: pageable).execute(apiResponseQueue) { result in
+            switch result {
+            case let .success(response):
+                completion(response.body, nil)
+            case let .failure(error):
+                completion(nil, error)
+            }
+        }
+    }
+
+    /**
+     Load a customer's detailed Social Impact transactions list based on provided filters
+     - GET /social/everyday/impact/center/transaction
+     - Load a customer's detailed Social Impact transactions list based on provided filters for Impact Center
+     - API Key:
+       - type: apiKey X-SPIRAL-CLIENT-ID 
+       - name: ClientID
+     - parameter X_SPIRAL_CUSTOMER_ID: (header) Unique end user bank customer ID. (optional)
+     - parameter X_SPIRAL_REQUEST_ID: (header) Unique request ID used for troubleshooting. (optional)
+     - parameter rewardUnitId: (query) Reward unit to get transactions by. Defaults to all units if not provided. (optional)
+     - parameter pageable: (query)  (optional)
+     - returns: RequestBuilder<EverydayImpactCenterTransactionsResponse> 
+     */
+    open class func getImpactCenterTransactionsWithRequestBuilder(X_SPIRAL_CUSTOMER_ID: String? = nil, X_SPIRAL_REQUEST_ID: String? = nil, rewardUnitId: String? = nil, pageable: Pageable? = nil) -> RequestBuilder<EverydayImpactCenterTransactionsResponse> {
+        let localVariablePath = "/social/everyday/impact/center/transaction"
+        let localVariableURLString = OpenAPIClientAPI.basePath + localVariablePath
+        let localVariableParameters: [String: Any]? = nil
+
+        var localVariableUrlComponents = URLComponents(string: localVariableURLString)
+        localVariableUrlComponents?.queryItems = APIHelper.mapValuesToQueryItems([
+            "rewardUnitId": (wrappedValue: rewardUnitId?.encodeToJSON(), isExplode: true),
+            "pageable": (wrappedValue: pageable?.encodeToJSON(), isExplode: true),
+        ])
+
+        let localVariableNillableHeaders: [String: Any?] = [
+            "X-SPIRAL-CUSTOMER-ID": X_SPIRAL_CUSTOMER_ID?.encodeToJSON(),
+            "X-SPIRAL-REQUEST-ID": X_SPIRAL_REQUEST_ID?.encodeToJSON(),
+        ]
+
+        let localVariableHeaderParameters = APIHelper.rejectNilHeaders(localVariableNillableHeaders)
+
+        let localVariableRequestBuilder: RequestBuilder<EverydayImpactCenterTransactionsResponse>.Type = OpenAPIClientAPI.requestBuilderFactory.getBuilder()
+
+        return localVariableRequestBuilder.init(method: "GET", URLString: (localVariableUrlComponents?.string ?? localVariableURLString), parameters: localVariableParameters, headers: localVariableHeaderParameters, requiresAuthentication: true)
+    }
+
+    /**
      Load a customer's Social Impact details for a single transaction
      
      - parameter transactionId: (path) Permanent, unique transaction id to retrieve the Social Responsibility Impact details for. Must survive changes to pending status or amount. 
