# Sources/SpiralSDK/Classes/OpenAPIs/Models/EverydayImpactCenterTransaction.swift
@@ -1,5 +1,5 @@
 //
-// SocialResponsibilityTransactionInstantImpactResponse.swift
+// EverydayImpactCenterTransaction.swift
 //
 // Generated by openapi-generator
 // https://openapi-generator.tech
@@ -10,8 +10,7 @@ import Foundation
 import AnyCodable
 #endif
 
-/** A single socially responsible Instant Impact from performing a financial transaction. */
-public struct SocialResponsibilityTransactionInstantImpactResponse: Codable, JSONEncodable, Hashable {
+public struct EverydayImpactCenterTransaction: Codable, JSONEncodable, Hashable {
 
     public var categoryId: String
     public var customerId: String?
@@ -38,8 +37,12 @@ public struct SocialResponsibilityTransactionInstantImpactResponse: Codable, JSO
     public var transactionAmount: Double?
     /** Transaction account identifier. */
     public var transactionAccountId: String?
+    /** Point value for cumulative impact (units) at the time of transaction */
+    public var cumulativeImpact: Double?
+    /** Point value for one unit progress for that transaction. Can be >1 if transaction earned more than 1 unit. */
+    public var cumulativeProgress: Double?
 
-    public init(categoryId: String, customerId: String? = nil, categoryName: String, rewardUnit: CharityRewardUnit? = nil, impact: Double, donatedAmount: Double? = nil, roundupAmount: Double? = nil, transactionId: String? = nil, transactionTimestamp: Double? = nil, transactionTitle: String? = nil, transactionType: String? = nil, statementDescription: String? = nil, transactionAmount: Double? = nil, transactionAccountId: String? = nil) {
+    public init(categoryId: String, customerId: String? = nil, categoryName: String, rewardUnit: CharityRewardUnit? = nil, impact: Double, donatedAmount: Double? = nil, roundupAmount: Double? = nil, transactionId: String? = nil, transactionTimestamp: Double? = nil, transactionTitle: String? = nil, transactionType: String? = nil, statementDescription: String? = nil, transactionAmount: Double? = nil, transactionAccountId: String? = nil, cumulativeImpact: Double? = nil, cumulativeProgress: Double? = nil) {
         self.categoryId = categoryId
         self.customerId = customerId
         self.categoryName = categoryName
@@ -54,6 +57,8 @@ public struct SocialResponsibilityTransactionInstantImpactResponse: Codable, JSO
         self.statementDescription = statementDescription
         self.transactionAmount = transactionAmount
         self.transactionAccountId = transactionAccountId
+        self.cumulativeImpact = cumulativeImpact
+        self.cumulativeProgress = cumulativeProgress
     }
 
     public enum CodingKeys: String, CodingKey, CaseIterable {
@@ -71,6 +76,8 @@ public struct SocialResponsibilityTransactionInstantImpactResponse: Codable, JSO
         case statementDescription
         case transactionAmount
         case transactionAccountId
+        case cumulativeImpact
+        case cumulativeProgress
     }
 
     // Encodable protocol methods
@@ -91,6 +98,8 @@ public struct SocialResponsibilityTransactionInstantImpactResponse: Codable, JSO
         try container.encodeIfPresent(statementDescription, forKey: .statementDescription)
         try container.encodeIfPresent(transactionAmount, forKey: .transactionAmount)
         try container.encodeIfPresent(transactionAccountId, forKey: .transactionAccountId)
+        try container.encodeIfPresent(cumulativeImpact, forKey: .cumulativeImpact)
+        try container.encodeIfPresent(cumulativeProgress, forKey: .cumulativeProgress)
     }
 }
 
