# Sources/SpiralSDK/Classes/OpenAPIs/Models/EverydayImpactCenterTransactionAllOf.swift
@@ -1,0 +1,38 @@
+//
+// EverydayImpactCenterTransactionAllOf.swift
+//
+// Generated by openapi-generator
+// https://openapi-generator.tech
+//
+
+import Foundation
+#if canImport(AnyCodable)
+import AnyCodable
+#endif
+
+public struct EverydayImpactCenterTransactionAllOf: Codable, JSONEncodable, Hashable {
+
+    /** Point value for cumulative impact (units) at the time of transaction */
+    public var cumulativeImpact: Double?
+    /** Point value for one unit progress for that transaction. Can be >1 if transaction earned more than 1 unit. */
+    public var cumulativeProgress: Double?
+
+    public init(cumulativeImpact: Double? = nil, cumulativeProgress: Double? = nil) {
+        self.cumulativeImpact = cumulativeImpact
+        self.cumulativeProgress = cumulativeProgress
+    }
+
+    public enum CodingKeys: String, CodingKey, CaseIterable {
+        case cumulativeImpact
+        case cumulativeProgress
+    }
+
+    // Encodable protocol methods
+
+    public func encode(to encoder: Encoder) throws {
+        var container = encoder.container(keyedBy: CodingKeys.self)
+        try container.encodeIfPresent(cumulativeImpact, forKey: .cumulativeImpact)
+        try container.encodeIfPresent(cumulativeProgress, forKey: .cumulativeProgress)
+    }
+}
+
